[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/npc_actor_sprites/Hhtrintina/HHTRINTINA BLUE EYE.png" type="Texture" id=1]
[ext_resource path="res://assets/font_test.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/menus_and_ui_sprites/dialogue box test.PNG" type="Texture" id=3]
[ext_resource path="res://assets/sprites/npc_actor_sprites/Hhtrintina/HHTRINTINA NECK.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/npc_actor_sprites/Hhtrintina/HHTRINTINA HEAD.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/npc_actor_sprites/Hhtrintina/HHTRINTINA RED EYE.png" type="Texture" id=6]
[ext_resource path="res://src/npc_actors/hhtrintina/HhtrintinaNPC.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 232, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.5, 115 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 103, 192 )

[sub_resource type="Animation" id=7]
resource_name = "RESET"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -18.3187, 0.0, 18.3, 0.0 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 28.0

[node name="HhtrintinaNPC" type="Node2D"]
script = ExtResource( 7 )

[node name="HhtrintinaNeck" type="Sprite" parent="."]
position = Vector2( -21, 71 )
texture = ExtResource( 4 )

[node name="head" type="KinematicBody2D" parent="."]
collision_layer = 64
collision_mask = 16384

[node name="HhtrintinaHead" type="Sprite" parent="head"]
position = Vector2( -18, 70 )
texture = ExtResource( 5 )
offset = Vector2( 4, -148 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="head"]
position = Vector2( -18, -290 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="head"]
position = Vector2( -18, -547 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="head"]
position = Vector2( -244.5, -421 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="head"]
position = Vector2( 210, -418 )
shape = SubResource( 5 )

[node name="TalktoArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalktoArea"]
position = Vector2( -15, -45 )
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 480.0
margin_right = 1018.0
margin_bottom = 593.0
texture = ExtResource( 3 )
region_rect = Rect2( 0.331, 0.003, 413.334, 409.998 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6

[node name="Dialogue" type="Label" parent="CanvasLayer/NinePatchRect"]
margin_left = 6.0
margin_top = 5.0
margin_right = 1007.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
text = "HHTRINTINA_DIALOGUE_NPC"

[node name="NinePatchRect2" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 452.0
margin_right = 136.0
margin_bottom = 476.0
texture = ExtResource( 3 )
region_rect = Rect2( 0.331, 0.003, 413.334, 409.998 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6

[node name="Name" type="Label" parent="CanvasLayer/NinePatchRect2"]
margin_left = 6.0
margin_top = 5.0
margin_right = 107.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Hhtrintina"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 7 )

[node name="BlueEYe" type="RigidBody2D" parent="."]
position = Vector2( -202, -350 )
collision_layer = 16384
collision_mask = 16448
mass = 8.6398
contact_monitor = true

[node name="HhtrintinaBlueEye" type="Sprite" parent="BlueEYe"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueEYe"]
shape = SubResource( 6 )

[node name="RedEYe" type="RigidBody2D" parent="."]
position = Vector2( -39, -371 )
collision_layer = 16384
collision_mask = 16448
mass = 44.9388
contact_monitor = true

[node name="HhtrintinaRedEye" type="Sprite" parent="RedEYe"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedEYe"]
shape = SubResource( 6 )

[connection signal="body_entered" from="TalktoArea" to="." method="_on_TalktoArea_body_entered"]
[connection signal="body_exited" from="TalktoArea" to="." method="_on_TalktoArea_body_exited"]
